[package]
name = "Basc_Staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "basc_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = "3.2.0"
solana-program = "=1.9.5"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
